# holistay

./: .env  .gitmodules  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  Dashboard.svelte  main.ts  (+12 more)
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal  tauri.conf.json
src-tauri/src/: main.rs  startup.rs
src-tauri/src/command_handler/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 20231212214226_create_user_table.up.sql  20231213004045_create_auth_table.down.sql  20231213004045_create_auth_table.up.sql  20240123211250_add_property_table.down.sql  20240123211250_add_property_table.up.sql  20240124202835_add_image_to_property.down.sql  20240124202835_add_image_to_property.up.sql  20240127130451_add_roomgroup_table.down.sql  20240127130451_add_roomgroup_table.up.sql  20240128122933_add_image_to_room_group_table.up.sql  20240302140700_add_settings_table.up.sql  20240302144541_add_default_user_to_settings.down.sql  20240302144541_add_default_user_to_settings.up.sql  20240303131742_add_description_to_room_group.down.sql  20240303131742_add_description_to_room_group.up.sql  20240303144803_add_description_to_property.down.sql  20240303144803_add_description_to_property.up.sql  20240303173530_add_room_table.down.sql  20240303173530_add_room_table.up.sql
src-tauri/src/errors/: mod.rs
src-tauri/src/event_system/: mod.rs
src-tauri/src/event_system/config/: config.rs
src-tauri/src/event_system/events/: mod.rs
src-tauri/src/event_system/handlers/: auth.rs  mod.rs  property.rs  room.rs  room_group.rs
src-tauri/src/events/: auth.rs  auth_service.rs  configuration.rs  event_handlers.rs  mod.rs  property_service.rs  requests.rs  room_group_service.rs  room_service.rs
src-tauri/src/models/: mod.rs  user.rs
src-tauri/src/models/auth/: mod.rs
src-tauri/src/models/db_intermediary/: mod.rs  property_room_group.rs
src-tauri/src/models/domain/: address.rs  contact.rs  mod.rs  property.rs  room.rs  room_group.rs
src-tauri/src/models/requests/: mod.rs
src-tauri/src/models/responses/: mod.rs
src-tauri/src/models/responses/errors/: mod.rs
src-tauri/src/repositories/: mod.rs  property_repository.rs
src-tauri/src/repositories/db_intermediary/: mod.rs  property_room_group_room_row.rs
src-tauri/src/responses/: mod.rs
src-tauri/src/responses/errors/: mod.rs
src-tauri/src/services/: auth_service.rs  mod.rs  property_service.rs  room_group_service.rs  room_service.rs
src-tauri/src/services/responses/: mod.rs  property_service_responses.rs
src-tauri/src/utils/: mod.rs
(+27 files in other folders)
