[package]
name = "Holistay"
version = "0.0.0"
description = "An app for managing long and short stay tenancies"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "migrate"] }
uuid = "1.6.1"
rusqlite = "0.30.0"
tokio = { version = "1.35.0", features = ["full", "libc"] }
base64 = "0.21.7"
log = "0.4.20"
url = "2.5.0"
env_logger = "0.11.1"
mockall = "0.12.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
